python/examples/classes/mydate1/run.out
Date(2013, 11, 22)
Date(2014, 1, 27)
Traceback (most recent call last):
  File "run.py", line 10, in <module>
    mydate.Date.set_date(2000, 2, 1)
TypeError: unbound method set_date() must be called with
           Date instance as first argument (got int instance instead)
