python/examples/classes/mydate1/run.py
from mydate import Date

d = Date(2013, 11, 22)
print(d)

d.set_date(2014, 1, 27)
print(d)

Date.set_date(2000, 2, 1)
